fix the flair bug: make then whitout gap

--- a/src/Components/Post/PostTitle/PostTitle.module.css
+++ b/src/Components/Post/PostTitle/PostTitle.module.css
@@ -20,7 +20,7 @@
 .PostTitleContainer .flairContainer {
   display: inline-flex;
   height: 20px;
-  column-gap: 5px;
+  /* column-gap: 5px; */
   justify-content: center;
   align-items: center;
   padding: 0 5px;
